--- a/WonderMoviePlayer/videoplay.html
+++ b/WonderMoviePlayer/videoplay.html
@@ -8,8 +8,7 @@
         This is demo html file for playing movie file embedded.
         </p>
         <p>
-        <video controls>
-            <source src="Movie.m4v">
+        <video controls src="Movie.m4v">
                 </video>
         </p>
         
